# cloudformatious

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yaml
examples/: cli.rs
src/: apply.rs  apply_stack.rs  change_set.rs  delete_stack.rs  error.rs  event.rs  lib.rs  raw.rs  stack.rs  status.rs  status_reason.rs  tag.rs
tests/: README.md  apply.rs  apply_delete_stack.rs  apply_stack.rs  change_set_detail.rs  cleanup.sh  cloudformatious-testing.yaml  delete_stack.rs  raw.rs
tests/it/: apply_stack.rs  blocked_stack.rs  change_set_detail.rs  common.rs  delete_stack.rs  main.rs  status_reasons.rs
tests/it/common/: stack_with_status.rs
