[package]
name = "cloudformatious"
version = "0.1.2"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "MIT"
edition = "2018"
description = "Extension traits for rusoto_cloudformation"
repository = "https://github.com/connec/cloudformatious"

[dependencies]
async-stream = "0.3.0"
aws-config = "0.49.0"
aws-sdk-cloudformation = "0.19.0"
aws-sdk-sts = "0.19.0"
aws-smithy-types-convert = { version = "0.49.0", features = ["convert-chrono"] }
chrono = "0.4.19"
enumset = { version = "1.0.6", features = ["serde"] }
futures-util = "0.3.14"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.85"
serde_plain = "0.3.0"
tokio = { version = "1.4.0" }

[dev-dependencies]
assert_matches = "1.5.0"
fastrand = "1.4.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
