[package]
name = "cloudformatious"
version = "0.7.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "MIT"
edition = "2018"
description = "Extension traits for rusoto_cloudformation"
repository = "https://github.com/connec/cloudformatious"

[dependencies]
async-stream = "0.3.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1"
aws-sdk-sts = "1"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
chrono = "0.4.19"
enumset = "1.0.6"
futures-util = "0.3.14"
lazy_static = "1.4.0"
parse-display = "0.6.0"
regex = "1.5.4"
serde_json = "1.0.85"
tokio = "1.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
fastrand = "1.4.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
